Wed Mar 11 05:06:46 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (rb_catch_protect): use THROW_DATA_VAL().

Wed Mar 11 04:56:04 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: define struct IFUNC.

	* vm_eval.c (rb_iterate): use it.

	* vm_insnhelper.c (vm_yield_with_cfunc): ditto.

Wed Mar 11 03:52:12 2015  Koichi Sasada  <ko1@atdot.net>

	* eval_intern.h (THROW_DATA_P): use RB_TYPE_P() instead of
	  BUILTIN_TYPE().

	* thread.c (thread_join): use THROW_DATA_P().

Wed Mar 11 03:48:01 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c: use RUBY_VM_IFUNC_P() to recognize IFUNC or not.

	* vm.c: ditto.

	* vm_dump.c: ditto.

	* vm_insnhelper.c: ditto.

	* vm_core.h (RUBY_VM_IFUNC_P): use RB_TYPE_P() instead of
	  BUILTIN_TYPE().

Wed Mar 11 03:21:37 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: define struct THROW_DATA to represent
	  throwing data. Also define accessor functions.

	* eval_intern.h: move related changes into vm_insnhelper.h.
	  Now these MACROs (functions) are only used in vm*.c.

	  There is only THROW_DATA_P(err) to check this data type or not.

	* vm.c: catch up these changes.

	* vm_eval.c: ditto.

	* vm_insnhelper.c: ditto.

Wed Mar 11 00:57:00 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/rubygems/test_gem_security_trust_dir.rb: The return value of
	  File::Stat#mode is OS dependent. In AIX, 0200000 is set.

Tue Mar 10 20:03:41 2015  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb: Invoke setup_shutdown_pipe in start method
	  instead of listen method.
	  [ruby-core:68476] [Bug #10956] Reported by Shintaro Kojima.

Tue Mar 10 17:27:27 2015  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_join): Fixnum (except TAG_FATAL) and
	  NODE should not be reached here.

Mon Mar  9 21:42:10 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (ep_cref): rename to lep_cref() because it should be
	  local ep.

Mon Mar  9 16:34:36 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
